update definition of pricing problem

--- a/pricing_problem/Makefile
+++ b/pricing_problem/Makefile
@@ -1,2 +1,7 @@
+all: master_problem pricing_problem.pdf
+
 master_problem: master_problem.cpp
 	g++ -lscip -lscipopt master_problem.cpp -o master_problem
+
+%.pdf: %.md
+	pandoc $< -o $@
