add connectivity constraints

--- a/pricing_problem/Makefile
+++ b/pricing_problem/Makefile
@@ -1,7 +1,10 @@
-all: master_problem pricing_problem.pdf
+all: master_problem pricing_problem.pdf pricing_problem
 
 master_problem: master_problem.cpp
 	g++ -lscip -lscipopt master_problem.cpp -o master_problem
+
+pricing_problem: pricing_problem.cpp
+	g++ -lscip -lscipopt pricing_problem.cpp -o pricing_problem
 
 %.pdf: %.md
 	pandoc $< -o $@
